--- a/tools/webui/templates/base.html
+++ b/tools/webui/templates/base.html
@@ -10,13 +10,13 @@ $def with (content)
     <div class="container">
 
     <div class="header">
-        <h1>Centralized logging made simple using <a href="">MongoDB</a></h1>
+        <h2>Centralized logging made simple using <a href="">MongoDB</a></h2>
     </div>
 
 
     $:content
 
-    <div class="footer">
+    <div class="footer"><br />
         <center>developed by <a href="http://www.andreisavu.ro/">andreisavu</a></center>
     </div>
 
